# WordplayWorkshop2025

./: .env.example  .gitignore  .pre-commit-config.yaml  CLEANUP_REPORT.md  CLEANUP_SUMMARY_20250801.md  Makefile  PROJECT_INDEX.md  README.md  cleanup_report.md  config.yaml  config.yaml.example  main.py  production_harvest.py  pyproject.toml  pytest.ini  run.py  run_50_papers.sh  setup_gemini.py
.github/workflows/: ci.yml
backup_tests_20250801/: conftest_enhanced.py  test_cli.py  test_enhanced_pipeline.py  test_llm_service.py  test_naming_guide.md
backup_tests_20250801/analysis/: test_visualizer.py
backup_tests_20250801/e2e/: test_data_flow.py  test_edge_cases.py  test_error_scenarios.py  test_production_features.py
backup_tests_20250801/e2e/archive/: test_performance_analysis.md
backup_tests_20250801/extraction/: test_enhanced_llm_extractor.py  test_enhanced_llm_extractor_refactored.py
backup_tests_20250801/harvesters/: test_arxiv_harvester.py  test_example_harvester_usage.py  test_semantic_scholar.py
backup_tests_20250801/processing/: test_batch_processor.py  test_pdf_fetcher.py
backup_tests_20250801/utils/: test_config.py  test_content_cache.py  test_content_cache_comprehensive.py
config/: config.yaml  config.yaml.example  test_config.yaml
data/: SEED_DATA_GUIDE.md  seed_papers.json
data/examples/: example_extraction_results.csv  example_harvested_papers.csv  example_screening_completed.csv
data/extracted/: extraction.csv  extraction_full.csv
data/full_date_splitting_harvest/: production_harvest_20250724_005613.csv
data/runs/20250731_194526/: screening.xlsx  screening_fixed.xlsx
data/templates/: extraction_results_template.csv  extraction_schema.json  papers_raw_template.csv  screening_progress_template.csv
data/test_date_splitting_harvest/: production_harvest_20250724_005236.csv
docs/: API_DOCUMENTATION.md  API_KEY_SETUP.md  DEVELOPER_GUIDE.md  E2E_TEST_IMPROVEMENTS.md  ENHANCED_PIPELINE_PLAN.md  LLM_PROVIDER_SETUP.md  NAVIGATION_INDEX.md  PRODUCTION_IMPROVEMENTS.md  QUICK_START_GUIDE.md  TESTING_IMPROVEMENTS.md  literature_review_coding_plan.md  review_protocol_v0_3.md  updating_filters_etc.md  v3_fixes_summary.md  v3_implementation_summary.md
docs/archive/: CLI_ARCHITECTURE_REDESIGN.md  MARKDOWN_CONSOLIDATION_SUMMARY.md  review_protocol_v0_3.md  v3_implementation_issues.md  v3_implementation_summary.md  v3_review_summary.md
docs/documentation/: API_DOCUMENTATION.md  API_KEY_SETUP.md  CACHING.md  LLM_PROVIDER_SETUP.md  MODULE_API_REFERENCE.md  PROXY_SETUP.md  SEARCH_IMPROVEMENTS.md  SEED_DATA_GUIDE.md
docs/plans/: PROJECT_IMPROVEMENT_PLAN.md
docs/reports/: ANALYSIS_SUMMARY.md  ARXIV_API_LIMITATION_ANALYSIS.md  CLEANUP_REPORT.md  COMPLETE_PIPELINE_TEST_PLAN.md  COMPLETE_PIPELINE_TEST_REPORT.md  ENHANCED_PIPELINE_COMPLETE.md  MULTI_LLM_IMPLEMENTATION.md  PIPELINE_LESSONS_LEARNED.md  PIPELINE_READY_SUMMARY.md  PIPELINE_TESTING_STRATEGY.md  PIPELINE_TESTING_SUMMARY.md  PROJECT_ANALYSIS_REPORT.md  PROJECT_IMPROVEMENT_PLAN.md  TESTING_ANALYSIS.md  TEST_COVERAGE_SUCCESS.md  TEST_REPORT.md  TROUBLESHOOTING_SUMMARY.md  v3_final_review_report.md
docs/tests/: PIPELINE_TESTING_COMPREHENSIVE.md  PIPELINE_TEST_GUIDE.md  TESTING_REPORT.md
notebooks/: example.ipynb
output/: papers.bib  production_harvest_20250723_232634.csv  production_harvest_20250723_235607.csv  seed_papers_extracted.csv  seed_papers_raw.csv  seed_papers_with_pdfs.csv  test_extraction.csv  test_extraction_llm.csv
pdf_cache/: cache_metadata.json
scripts/: DEPRECATED.md  auto_include_papers.py  check_deps.py  clean.sh  create_test_dataset.py  demo.py  fix_python39_compatibility.py  generate_stats.py  inspect_db.py  run_tests.py  run_tests.sh  setup_dev.sh  test_exporter_v3.py  test_llm_provider.py  test_query_builder.py  test_seed_papers.py  test_v3_config.py  test_v3_full_pipeline.py  utils.py
src/: example.py
src/lit_review/: __main__.py  llm_providers.py  llm_service.py
src/lit_review/analysis/: __init__.py
src/lit_review/extraction/: __init__.py  enhanced_llm_extractor.py  llm_extractor.py  tagger.py
src/lit_review/harvesters/: __init__.py  arxiv_harvester.py  base.py  crossref.py  google_scholar.py  production_harvester.py  query_builder.py  query_optimizer.py  search_harvester.py  semantic_scholar.py
src/lit_review/processing/: __init__.py  batch_processor.py  disambiguator.py  normalizer.py  pdf_fetcher.py  screen_ui.py
src/lit_review/utils/: __init__.py  config.py  content_cache.py  exporter.py  logging_db.py
src/lit_review/visualization/: __init__.py  visualizer.py
test_output/: HARVESTING_TEST_RESULTS.md
test_output/results/: arxiv_test.csv  combined_test.csv  crossref_test.csv  papers.bib  semantic_scholar_test.csv
tests/: conftest.py  test_cli.py  test_data_generators.py  test_doubles.py  test_enhanced_pipeline.py  test_example.py  test_example_module.py  test_fixtures.py  test_helpers.py  test_llm_providers.py  test_llm_service.py  test_utils.py
tests/analysis/: test_tagger.py  test_visualizer.py
tests/e2e/: E2E_TEST_OPTIMIZATION.md  test_data_flow.py  test_edge_cases.py  test_error_scenarios.py  test_full_pipeline.py  test_performance_load.py  test_production_features.py  test_realistic_scenarios.py
tests/extraction/: test_enhanced_llm_extractor.py  test_llm_extractor.py
tests/harvesters/: test_arxiv_harvester.py  test_crossref.py  test_google_scholar.py  test_production_harvester.py  test_production_harvester_comprehensive.py  test_query_optimizer.py  test_search_harvester.py
tests/processing/: test_batch_processor_comprehensive.py  test_normalizer.py  test_normalizer_comprehensive.py  test_pdf_fetcher.py  test_pdf_fetcher_refactored.py  test_screen_ui.py
tests/utils/: test_config.py  test_exporter.py  test_logging_db.py
tests/visualization/: test_visualizer.py  test_visualizer_comprehensive.py
v1_pipeline_run/: PIPELINE_EXECUTION_LOG.md  V1_PIPELINE_COMPLETE_REPORT.md  fetch_metadata.csv  fetch_papers.py
v1_pipeline_run/extracted/: extraction_results.csv
v1_pipeline_run/harvested/: papers_raw.csv
(+10 files in other folders)
